<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<ScrollView
		android:id="@+id/ScrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dip"
			android:orientation="vertical" >

			<CheckBox
				android:id="@+id/chk_enablefloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center"
				android:textSize="17sp"
				android:text= "@string/enablefloatingicon" />

			<TextView
				android:id="@+id/label_editfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/editfloatingicon" />

			<Button
				android:id="@+id/btn_editfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="17sp" />

			<TextView
				android:id="@+id/label_directionfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:gravity="left"
				android:text="@string/directionfloatingicon" />

			<Button
				android:id="@+id/btn_directionfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="17sp" />

			<TextView
				android:id="@+id/label_cursorfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/cursorfloatingicon" />

			<Button
				android:id="@+id/btn_cursorfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="17sp" />

			<TextView
				android:id="@+id/label_sizefloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/sizefloatingicon" />

			<SeekBar
				android:id="@+id/seek_sizefloatingicon"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_horizontalfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/horizontalfloatingicon" />

			<SeekBar
				android:id="@+id/seek_horizontalfloatingicon"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_verticalfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/verticalfloatingicon" />

			<SeekBar
				android:id="@+id/seek_verticalfloatingicon"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_transparencyfloatingicon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/transparencyfloatingicon" />

			<SeekBar
				android:id="@+id/seek_transparencyfloatingicon"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>
