<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<ScrollView
		android:id="@+id/ScrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dip"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/label_fontepubtext"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/fontEpubText" />

			<SeekBar
				android:id="@+id/seek_fontepubtext"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_fontepubbody"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/fontEpubBody" />

			<SeekBar
				android:id="@+id/seek_fontepubbody"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_fontinfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/fontInfo" />

			<SeekBar
				android:id="@+id/seek_fontinfo"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_marginw"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/marginW" />

			<SeekBar
				android:id="@+id/seek_marginw"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_marginh"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8sp"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/marginH" />

			<SeekBar
				android:id="@+id/seek_marginh"
				style="@style/PageSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>
